--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,13 @@ dependencies = [
     "scipy",
 ]
 
+[project.optional-dependencies]
+dev = [
+  "ruff",
+]
+pyqt5 = ["PyQt5>=5.15.0"]
+
+
 [project.urls]
 Homepage = "https://github.com/oliche/easyqc"
 "Bug Tracker" = "https://github.com/oliche/easyqc/issues"
