--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,20 @@
 [project]
 name = "easyqc"
-version = "1.1.0"
+dynamic = ["version"]
 description = "Seismic viewer for numpy"
 readme = "README.md"
 authors = [
     {name = "Olivier Winter"},
 ]
+version = {attr = "easyqc.__version__"}
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = [
-    "PyQt5",
+    "qtpy",
     "numpy",
     "pyqtgraph>=0.13.1",
     "scipy",
@@ -25,7 +26,10 @@ dev = [
     "pytest-qt",
 ]
 pyqt5 = ["PyQt5>=5.15.0"]
-
+pyqt6 = ["PyQt6>=6.2.0"]
+pyside2 = ["PySide2>=5.15.0"]
+pyside6 = ["PySide6>=6.2.0"]
+qt = ["PyQt5>=5.15.0"]  # Default to PyQt5 for backward compatibility
 
 [project.urls]
 Homepage = "https://github.com/oliche/easyqc"
